# agent-incubation

./: .env.example  .gitignore  README.md  setup.bat  setup.sh  summary.md
agent-foundry/: .gitignore  README.md  pyproject.toml
agent-foundry/.github/: PULL_REQUEST_TEMPLATE.md
agent-foundry/.github/ISSUE_TEMPLATE/: effect-rfc.md
agent-foundry/.github/workflows/: ci.yml
agent-foundry/deploy/: Dockerfile
agent-foundry/docs/: README.md  effects-reference.md  engineering-overview.md  evals-and-guardrails.md  memory-and-tools.md  platform-architecture.md  quickstart.md
agent-foundry/examples/care_coordinator/: agent.py
agent-foundry/examples/contract_review/: agent.py  manifest.yaml
agent-foundry/examples/email_triage/: agent.py  manifest.yaml  policy.yaml
agent-foundry/examples/fiduciary_watchdog/: agent.py  graph_agent.py  manifest.yaml
agent-foundry/examples/life_event_anticipation/: agent.py  manifest.yaml
agent-foundry/examples/plan_design_optimizer/: agent.py  policy.yaml
agent-foundry/examples/retirement_trajectory/: agent.py  policy.yaml
agent-foundry/policies/financial_services/: defaults.yaml
agent-foundry/src/foundry/: __init__.py
agent-foundry/src/foundry/cli/: __init__.py  main.py
agent-foundry/src/foundry/deploy/: __init__.py  bedrock.py  lambda_handler.py  secrets.py
agent-foundry/src/foundry/eval/: __init__.py  evaluator.py
agent-foundry/src/foundry/gateway/: __init__.py  base.py
agent-foundry/src/foundry/harness/: __init__.py  approver.py  builder.py  fixtures.py  report.py  shadow.py
agent-foundry/src/foundry/integrations/: __init__.py  bedrock_agent_client.py  bedrock_guardrails.py  bedrock_kb.py  bedrock_llm.py  langchain.py  langgraph.py
agent-foundry/src/foundry/lifecycle/: __init__.py  stages.py
agent-foundry/src/foundry/memory/: __init__.py  buffer.py  store.py
agent-foundry/src/foundry/observability/: __init__.py  audit_report.py  tracker.py
agent-foundry/src/foundry/policy/: __init__.py  builder.py  compliance_effects.py  effects.py  healthcare_effects.py  itsm_effects.py  legal_effects.py
agent-foundry/src/foundry/registry/: __init__.py  catalog.py
agent-foundry/src/foundry/scaffold/: __init__.py  base.py  manifest.py
agent-foundry/src/foundry/tollgate/: __init__.py  anomaly_detector.py  approvals.py  audit.py  audit_viewer.py  cache.py  circuit_breaker.py  cli.py  context_monitor.py  exceptions.py  explainer.py  grants.py  helpers.py  manifest_signing.py  network_guard.py  otel.py  playground.py  policy.py  policy_testing.py  policy_versioning.py  rate_limiter.py  registry.py  reputation.py  slo.py  telemetry.py  tower.py  types.py  verification.py  workflow.py
agent-foundry/src/foundry/tollgate/api/: routes.py  server.py
agent-foundry/src/foundry/tollgate/backends/: __init__.py  dynamodb_store.py  redis_rate_limiter.py  redis_store.py  sqlite_store.py  sqs_approver.py
agent-foundry/src/foundry/tollgate/integrations/: mcp.py  strands.py
agent-foundry/src/foundry/tollgate/interceptors/: base.py  langchain.py  openai.py
agent-foundry/src/foundry/tollgate/security/: encryption.py  immutable_audit.py
agent-foundry/src/foundry/tollgate/tenancy/: __init__.py  quotas.py
agent-foundry/src/foundry/tools/: __init__.py  registry.py
agent-foundry/tests/: test_base_agent.py  test_builder.py  test_deploy.py  test_effects.py  test_eval.py  test_gateway.py  test_manifest.py  test_memory.py  test_tools.py  test_tracker.py
agent-foundry/tests/integration/: test_full_pipeline.py
agent-foundry/tests/integration/fixtures/: manifest.yaml  policy.yaml
agent-registry/: .gitignore  CODEOWNERS  README.md
agent-registry/.github/: PULL_REQUEST_TEMPLATE.md
agent-registry/.github/workflows/: ci.yml
agent-registry/registry/retirement-trajectory/: manifest.yaml
agent-team-template/: .gitignore  README.md  pyproject.toml
agent-team-template/.github/workflows/: ci.yml
agent-team-template/agents/example-agent/: agent.py  manifest.yaml  policy.yaml
agent-team-template/agents/example-agent/tests/: test_example_agent.py
arc/: README.md  pyproject.toml
arc/agents/care-coordinator/: agent.py  manifest.yaml  policy.yaml
arc/agents/contract-review/: agent.py  policy.yaml
arc/agents/email-triage/: agent.py  graph.py  manifest.yaml  pega_router.py  policy.yaml
arc/agents/fiduciary-watchdog/: agent.py  graph_agent.py  manifest.yaml  policy.yaml
arc/agents/life-event-anticipation/: agent.py  manifest.yaml  (+1 more)
deck/: agent-fiduciary-watchdog.html  agent-incubation-pipeline.html  agent-life-event.html
demos/agentcore-portability/: README.md  compare.py  run_demo.py
deploy/: Dockerfile  bedrock-agent-core.md  ecs-task-def.json
deploy/cdk/: DATADOG.md  app.py  arc_stack.py  bedrock_agent_stack.py  datadog_forwarder_stack.py  foundry_stack.py
deploy/datadog/: README.md  import_dashboards.sh
docs/: architecture-diagrams.md  architecture-overview.md  architecture.md  backlog.md  component-map.md  migration-plan.md  roadmap.md
docs/concepts/: data-redaction.md  effects.md  feedback.md  governance.md  lifecycle.md  llm-clients.md  telemetry.md
docs/foundry-legacy/: README.md  engineering-overview.md  gateway-and-integrations.md  quickstart.md  team-onboarding.md
docs/guides/: build-an-agent.md  claims-triage-demo.md  configuration.md  demo.md  email-triage-integration.md  live-console.md
docs/marketing/: competitive-analysis.html  foundry-quickstart.docx
docs/vision/: engineering-overview.docx  platform-vision.pptx  project-plan.docx
policies/financial_services/: defaults.yaml  erisa.yaml
tollgate/: .gitignore  README.md  pyproject.toml
tollgate/src/tollgate/: audit_viewer.py  explainer.py  otel.py  playground.py  policy.py  policy_versioning.py  rate_limiter.py  telemetry.py  types.py
tollgate/src/tollgate/api/: __init__.py  routes.py
tollgate/src/tollgate/backends/: __init__.py  dynamodb_store.py  redis_rate_limiter.py  s3_audit_sink.py  sqs_approver.py
tollgate/src/tollgate/security/: __init__.py  immutable_audit.py
tollgate/tests/: test_s3_audit_sink.py  test_smoke.py
(+18 files in other folders)
