[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-foundry"
version = "0.1.0"
description = "The enterprise agent incubation platform — from idea to governed production agent"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Ravi Labs", email = "ravi@ravi-labs.dev" },
]
keywords = [
    "ai", "agents", "policy", "governance", "incubation",
    "financial-services", "erisa", "compliance", "llm"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
]
dependencies = [
    "pyyaml>=6.0.0",
    "click>=8.0.0",
]

[project.scripts]
foundry = "foundry.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# ── Orchestration frameworks ──────────────────────────────────────────────────
# Teams use these INSIDE execute() for LLM reasoning and multi-step flows.
# The foundry core remains framework-agnostic; these are opt-in per team.

langchain = [
    # LLM abstraction, tool calling wrappers, RAG chains
    "langchain-core>=0.2.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
]
langgraph = [
    # Stateful multi-step agent state machines (recommended for complex agents)
    "langgraph>=0.2.0",
    "agent-foundry[langchain]",
]

# ── AWS deployment ────────────────────────────────────────────────────────────
aws = [
    # Core AWS SDK — required for: BedrockLLMClient, DynamoDB store,
    # SQS approver, Secrets Manager, Lambda handler, Bedrock Agent Core adapter
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]
strands = [
    # AWS Strands Agents — Bedrock-native agent SDK (alternative to LangChain)
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "agent-foundry[aws]",
]
cdk = [
    # AWS CDK — for deploying foundry infrastructure (build-time, not runtime)
    "aws-cdk-lib>=2.100.0",
    "constructs>=10.0.0",
]

# ── Infrastructure ────────────────────────────────────────────────────────────
redis = [
    "redis[hiredis]>=5.0.0",
]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
encryption = [
    "cryptography>=41.0.0",
]

# ── Bundles ───────────────────────────────────────────────────────────────────
enterprise = [
    # Everything for a fully governed, production-grade AWS deployment:
    # LangGraph orchestration + AWS backends (DDB, SQS, Secrets Manager, Bedrock)
    # + Redis + OpenTelemetry + encryption
    "agent-foundry[redis,otel,encryption,langgraph,aws,strands]",
]

[project.urls]
Homepage = "https://github.com/ravi-labs/agent-foundry"
Repository = "https://github.com/ravi-labs/agent-foundry.git"
Documentation = "https://github.com/ravi-labs/agent-foundry#readme"
Issues = "https://github.com/ravi-labs/agent-foundry/issues"
"Tollgate (Policy Engine)" = "https://github.com/ravi-labs/tollgate"

[tool.hatch.build.targets.wheel]
packages = ["src/foundry"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "PTH", "RET"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG001", "ARG002", "E402", "E501", "B007"]
"examples/**" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
