[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-foundry"
version = "0.1.0"
description = "Back-compat shim package — re-exports arc.* under the legacy foundry.* namespace"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Ravi Labs", email = "ravi@ravi-labs.dev" },
]
keywords = [
    "ai", "agents", "policy", "governance", "incubation",
    "financial-services", "erisa", "compliance", "llm"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
]
# Every foundry.X module is now a thin re-export of arc.X. Pulling in the
# canonical arc packages is therefore the entire dependency surface.
dependencies = [
    "arc-core>=0.1.0",
    "arc-harness>=0.1.0",
    "arc-runtime>=0.1.0",
    "arc-cli>=0.1.0",
    "arc-eval>=0.1.0",
    "arc-orchestrators>=0.1.0",
    "arc-connectors>=0.1.0",
]

[project.scripts]
# Legacy script aliases — both delegate to arc-cli / arc-core entry points.
foundry = "foundry.cli.main:cli"
foundry-audit = "foundry.observability.audit_report:main"

[project.optional-dependencies]
# These extras are kept purely as install-time aliases so that legacy
# instructions like `pip install 'agent-foundry[aws]'` (still printed by
# many arc / tollgate error messages) continue to install the expected
# transitive packages.

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

# ── Orchestration frameworks ──────────────────────────────────────────────────
langchain = [
    "langchain-core>=0.2.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
]
langgraph = [
    "langgraph>=0.2.0",
    "agent-foundry[langchain]",
]

# ── AWS deployment ────────────────────────────────────────────────────────────
aws = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]
strands = [
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "agent-foundry[aws]",
]
cdk = [
    "aws-cdk-lib>=2.100.0",
    "constructs>=10.0.0",
]

# ── Infrastructure ────────────────────────────────────────────────────────────
http = [
    "httpx>=0.27.0",
]
redis = [
    "redis[hiredis]>=5.0.0",
]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
encryption = [
    "cryptography>=41.0.0",
]

# ── Bundles ───────────────────────────────────────────────────────────────────
enterprise = [
    "agent-foundry[http,redis,otel,encryption,langgraph,aws,strands]",
]

[project.urls]
Homepage = "https://github.com/ravi-labs/agent-foundry"
Repository = "https://github.com/ravi-labs/agent-foundry.git"
Documentation = "https://github.com/ravi-labs/agent-foundry#readme"
Issues = "https://github.com/ravi-labs/agent-foundry/issues"
"Tollgate (Policy Engine)" = "https://github.com/ravi-labs/tollgate"

[tool.hatch.build.targets.wheel]
packages = ["src/foundry"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "PTH", "RET"]
ignore = []
