[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "your-team-agents"
version = "0.1.0"
description = "AI agents built on the arc platform — replace with your team name"
requires-python = ">=3.11"
dependencies = [
    "arc-core>=0.1.0",
    "arc-harness>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agents"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["agents"]
python_files = "test_*.py"
asyncio_mode = "auto"
